--- a/Mathflat/Base.lproj/Main.storyboard
+++ b/Mathflat/Base.lproj/Main.storyboard
@@ -1,24 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Mathflat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZAj-AV-f5O" customClass="SketchView" customModule="Sketch">
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JP4-ZW-Lip">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBD-s9-0xn">
+                                        <rect key="frame" x="13" y="18" width="44" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="u0k-Ka-jlm"/>
+                                            <constraint firstAttribute="width" constant="44" id="xlk-cz-gbm"/>
+                                        </constraints>
+                                        <state key="normal" title="SAVE">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onSaveTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LVL-Nf-bKe"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fi-c6-QHX">
+                                        <rect key="frame" x="67" y="18" width="44" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="44" id="CgJ-yb-mSJ"/>
+                                            <constraint firstAttribute="height" constant="44" id="QyM-NK-MjB"/>
+                                        </constraints>
+                                        <state key="normal" title="LOAD">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onLoadTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vP2-t8-eux"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gaM-X5-Blf">
+                                        <rect key="frame" x="264" y="18" width="44" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="7SQ-FD-2ay"/>
+                                            <constraint firstAttribute="width" constant="44" id="Ut2-bO-vSo"/>
+                                        </constraints>
+                                        <state key="normal" title="PEN">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onPenTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ufK-61-P61"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCq-kq-84R">
+                                        <rect key="frame" x="318" y="18" width="44" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="44" id="nOD-EM-RzD"/>
+                                            <constraint firstAttribute="height" constant="44" id="s4q-hl-6NF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="ERASE">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onEraseTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tcW-he-vWd"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LXU-wu-6Lg">
+                                        <rect key="frame" x="211" y="18" width="33" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="eqj-W0-21G"/>
+                                            <constraint firstAttribute="width" constant="33" id="pmc-0L-k3K"/>
+                                        </constraints>
+                                        <state key="normal" title="-&gt;">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onRedoTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gpg-2E-ShQ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaB-KC-lMl">
+                                        <rect key="frame" x="111" y="5" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="onAddPictureTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ead-97-iqX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7zV-iN-7ew">
+                                        <rect key="frame" x="165" y="18" width="33" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="33" id="XVJ-zK-30C"/>
+                                            <constraint firstAttribute="height" constant="44" id="q3n-Jv-Fij"/>
+                                        </constraints>
+                                        <state key="normal" title="&lt;-">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onUndoTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GUR-AZ-pnd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstItem="RBD-s9-0xn" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="5bT-OS-m2H"/>
+                                    <constraint firstItem="kaB-KC-lMl" firstAttribute="top" secondItem="JP4-ZW-Lip" secondAttribute="top" constant="5" id="9Bd-VQ-QkP"/>
+                                    <constraint firstItem="bCq-kq-84R" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="GXi-W0-fBH"/>
+                                    <constraint firstItem="LXU-wu-6Lg" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="MEc-De-p18"/>
+                                    <constraint firstItem="gaM-X5-Blf" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="OU8-WW-np0"/>
+                                    <constraint firstItem="gaM-X5-Blf" firstAttribute="leading" secondItem="LXU-wu-6Lg" secondAttribute="trailing" constant="20" id="UcD-Z6-uT1"/>
+                                    <constraint firstAttribute="height" constant="80" id="a6y-a3-Wo1"/>
+                                    <constraint firstItem="4Fi-c6-QHX" firstAttribute="leading" secondItem="RBD-s9-0xn" secondAttribute="trailing" constant="10" id="cWN-Wp-uxS"/>
+                                    <constraint firstItem="RBD-s9-0xn" firstAttribute="leading" secondItem="JP4-ZW-Lip" secondAttribute="leading" constant="13" id="ccI-JR-r4i"/>
+                                    <constraint firstItem="bCq-kq-84R" firstAttribute="leading" secondItem="gaM-X5-Blf" secondAttribute="trailing" constant="10" id="gUY-2L-pFf"/>
+                                    <constraint firstAttribute="trailing" secondItem="bCq-kq-84R" secondAttribute="trailing" constant="13" id="h5a-tU-I6v"/>
+                                    <constraint firstItem="LXU-wu-6Lg" firstAttribute="leading" secondItem="7zV-iN-7ew" secondAttribute="trailing" constant="13" id="jMe-db-3NP"/>
+                                    <constraint firstItem="4Fi-c6-QHX" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="lBo-aW-bEY"/>
+                                    <constraint firstItem="7zV-iN-7ew" firstAttribute="centerY" secondItem="JP4-ZW-Lip" secondAttribute="centerY" id="mYj-hV-miQ"/>
+                                    <constraint firstItem="kaB-KC-lMl" firstAttribute="leading" secondItem="4Fi-c6-QHX" secondAttribute="trailing" id="sC9-D6-tgw"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstItem="ZAj-AV-f5O" firstAttribute="top" secondItem="JP4-ZW-Lip" secondAttribute="bottom" id="1c7-nf-dKy"/>
+                            <constraint firstItem="JP4-ZW-Lip" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="BNB-d3-XLc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JP4-ZW-Lip" secondAttribute="trailing" id="Hp4-Jk-Ia7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZAj-AV-f5O" secondAttribute="bottom" id="JgJ-3t-yS1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZAj-AV-f5O" secondAttribute="trailing" id="MdC-Xx-XUc"/>
+                            <constraint firstItem="ZAj-AV-f5O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XxV-jZ-I8V"/>
+                            <constraint firstItem="JP4-ZW-Lip" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gvS-18-Exd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="sketchView" destination="ZAj-AV-f5O" id="HGk-uE-qeu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="5.7971014492753632" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
